config-root/namespaces/jx-staging/go-demo/go-demo-go-demo-deploy.yaml
# Source: go-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-go-demo
  labels:
    draft: draft-app
    chart: "go-demo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: go-demo-go-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: go-demo-go-demo
    spec:
      serviceAccountName: go-demo-go-demo
      containers:
        - name: go-demo
          image: "gcr.io/vm-test-jx/go-demo:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
