config-root/namespaces/jx-staging/go-demo/go-demo-svc.yaml
# Source: go-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo
  labels:
    chart: "go-demo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: go-demo-go-demo
