config-root/namespaces/jx-staging/go-demo/go-demo-ingress.yaml
# Source: go-demo/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: go-demo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: go-demo
              servicePort: 80
      host: go-demo-jx-staging.35.232.140.43.nip.io
